fixed search box shifting behavior

--- a/client/spotFinder.css
+++ b/client/spotFinder.css
@@ -78,9 +78,6 @@ div{
 
 #pac-input:focus {
   border-color: #4d90fe;
-  margin-left: -1px;
-  padding-left: 14px;  /* Regular padding-left + 1. */
-  width: 401px;
 }
 
 .pac-container {
